--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header{
 h1{
     color:#f30008;
     font-family: Work Sans;
-    padding-left: 44%;
+    padding-left: 45.5%;
     padding-top: 2%;
 }
 
@@ -64,8 +64,12 @@ main div section{
 }
 
 
-button{
+nav{
         cursor: url(./img/Cursor2.png),auto;
+}
+
+nav input{
+    border: 0;
 }
 
 aside{
